# cross-plat-test

./: Cargo.toml  README.md
src/: cli.rs  log.rs  main.rs  service.rs  setup.rs
