[package]
name = "cross-plat-test"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = "symbols"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "signal", "time"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }


[target.'cfg(target_os = "linux")'.dependencies]
sd-notify = "0.5.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-service = "0.8.0"
eventlog = "0.4.0"
windows = {version = "0.62.2", features = [
  "Win32_System_EventLog",
  "Win32_Foundation", 
  "Win32_Security",   
]}
